Fixed an extra margin

--- a/wp-content/themes/akfgfragments/style.css
+++ b/wp-content/themes/akfgfragments/style.css
@@ -129,7 +129,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .main-side-block:last-of-type {
-    margin-bottom: 30px;
+    margin-bottom: 0;
 }
 
 .main-socials {
